// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/about 1`] = `
Object {
  "props": Object {
    "files": Array [],
    "frontMatter": Object {},
    "html": "",
    "markdown": "",
    "mdxSource": null,
    "nextmd": Array [
      "about",
    ],
    "tableOfContents": Array [],
  },
}
`;

exports[`/blog 1`] = `
Object {
  "props": Object {
    "files": Array [
      Object {
        "frontMatter": Object {},
        "markdown": "",
        "nextmd": Array [
          "blog",
          "post-1",
        ],
      },
      Object {
        "frontMatter": Object {},
        "markdown": "",
        "nextmd": Array [
          "blog",
          "post-2",
        ],
      },
      Object {
        "frontMatter": Object {},
        "markdown": "",
        "nextmd": Array [
          "blog",
          "post-3",
        ],
      },
    ],
    "frontMatter": Object {},
    "html": "",
    "markdown": "",
    "mdxSource": null,
    "nextmd": Array [
      "blog",
    ],
    "tableOfContents": Array [],
  },
}
`;

exports[`/path/to/e 1`] = `
Object {
  "props": Object {
    "files": Array [],
    "frontMatter": Object {},
    "html": null,
    "markdown": "",
    "mdxSource": "mocked",
    "nextmd": Array [
      "path",
      "to",
      "e",
    ],
    "tableOfContents": Array [],
  },
}
`;
